// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge 1`] = `
<div
  className="css-16zxq88-StyledBadge e1w3mjmy0"
>
  BADGETEXT
</div>
`;

exports[`with variant 1`] = `
<div
  className="orange css-16zxq88-StyledBadge e1w3mjmy0"
>
  3
</div>
`;
